@@ -1,3 +1,12 @@
+2007-07-10  Christian Persch  <chpe@gnome.org>
+
+	* src/ephy-fullscreen-popup.c:
+	(ephy_fullscreen_popup_set_security_state),
+	(ephy_fullscreen_popup_constructor),
+	(ephy_fullscreen_popup_finalize):
+
+	Port to new tooltips API.
+
 2007-07-10  Luca Ferretti  <elle.uca@libero.it>
 
 	* data/epiphany.desktop.in.in:
